linking telegram id to user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.config.import=optional:file:./.env
 
 spring.application.name=spring-boot
 spring.datasource.url=jdbc:postgresql://localhost:5431/tasks_sample
-# spring.datasource.username=${DB_USERNAME}
-# spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 server.port=8090
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-# spring.app.jwtSecret=${JWT_SECRET}
+spring.app.jwtSecret=${JWT_SECRET}
 spring.app.jwtExpirationMs=72000000
 
 spring.mail.host=smtp.gmail.com
@@ -19,3 +19,5 @@ spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 app.confirmation-code.ttl-seconds=360
+
+app.tg-bot.token=${TG_BOT_TOKEN}
